--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,12 +2,15 @@ apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 apply plugin: 'idea'
 
+ext {
+	htmFlowVersion = "0.1"
+}
 
 repositories {
 	mavenLocal()
 	jcenter()
 	maven {
-		url "https://dl.bintray.com/openmastery/maven"
+		url "https://dl.bintray.com/dreamscale-io/maven-public"
 	}
 }
 
@@ -17,19 +20,23 @@ configurations.all {
 }
 
 dependencies {
-	compile 'org.openmastery:ifm-publisher-client:0.+'
+	compile "org.dreamscale:htm-flow-rest-client:${htmFlowVersion}"
+	compileOnly "org.projectlombok:lombok:1.18.2"
 
-	testCompile 'org.openmastery:ifm-publisher-test:0.+'
-	testCompile 'org.slf4j:slf4j-api:1.7.12'
-	testCompile 'com.google.guava:guava:18.0'
-	testCompile 'org.reflections:reflections:0.9.9-RC1'
+	testCompile "org.dreamscale:htm-flow-rest-client-test:${htmFlowVersion}"
+	testCompile "org.slf4j:slf4j-api:1.7.12"
+	testCompile "com.google.guava:guava:18.0"
+	testCompile "org.reflections:reflections:0.9.9-RC1"
 	testCompile "cglib:cglib-nodep:3.2.0"
-	testCompile 'org.objenesis:objenesis:1.3'
-	testCompile "org.spockframework:spock-spring:1.0-groovy-2.4"
+	testCompile "org.objenesis:objenesis:1.3"
+	testCompile "org.codehaus.groovy:groovy-all:2.4.15"
+	testCompile ("org.spockframework:spock-spring:1.0-groovy-2.4") {
+		exclude group: "org.codehaus.groovy"
+	}
 	testCompile "org.springframework.boot:spring-boot-starter-test:1.3.5.RELEASE"
 }
 
-jar.baseName = 'ideaflow-core'
+jar.baseName = "ideaflow-core"
 
 publishing {
 	publications {
